# summa2

./: .dockerignore  Dockerfile  Jenkinsfile  README.md  build-wasm.sh  docker-compose.yml  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.js
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
public/wasm/python/: document_analyzer.py
public/wasm/rust/: document_converter.js  document_converter_bg.wasm
scripts/: deploy.sh
src/: App.jsx
src/components/: ConversionProgress.tsx  DragAndDropFile.jsx  ExamRequirements.tsx  ExamSelector.tsx
src/config/: examConfigs.ts
src/services/: wasmService.ts
src/types/: index.ts
src/wasm/rust/: Cargo.toml
src/wasm/rust/src/: lib.rs
